--- a/template.html
+++ b/template.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <!-- comments look like this -->
+
 <html>
 <head>
+
   <title>
-    Cool Website Title
+    Shirley Yuan 
   </title>
-  <!-- <link rel.../> tag goes here. -->
+<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header> <!-- stuff that never changes (site name, navigation) -->
-  <h1>My New Shiny Website</h1>
+  <h1>Shirley's New Shiny Website</h1>
   <div> <!-- navigation section -->
     <span><a href="about.html">About Me</a></span>
     <span><a href="resume.html">Resume</a></span>
@@ -19,12 +21,26 @@
 
 <main> <!-- stuff that changes on every page -->
   With shiny content that should go here!
+  <a href="http://www.google.ca">Search Google</a>
+  
+
+  
+
 
   Note that although this line looks like it should start a new paragraph,
   it doesn't.
 
   <p>Instead, put paragraphs in these tags</p>
   <p>Like this.</p>
+  <img src='Pictures/chengdu.jpg' alt="chengdu" height="1000" width="1000"/>
+  <div> 
+    <h1> why I love CS <h1>
+      <ul>
+        <li> Make some cool things </li>
+        <li> Solve problems! </li>
+      </ul>
+  </div>
+
 </main>
 
 <footer>
