--- a/index.html
+++ b/index.html
@@ -9,31 +9,43 @@
   </title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
 <header> <!-- stuff that never changes (site name, navigation) -->
-  <h1>Shirley's New Shiny Website</h1>
-  <div> <!-- navigation section -->
+  <div class="Timeline-title">
+  <h1>Shirley Yuan</h1>
+</div>
+
+  <div class="Timeline-select"> <!-- navigation section -->
     <span><a href="about.html">About Me</a></span>
     <span><a href="resume.html">Resume</a></span>
     <span><a href="">Github</a></span>
   </div>
+
 </header>
 
 <main> <!-- stuff that changes on every page -->
-  With shiny content that should go here!
-  <a href="http://www.google.ca">Search Google</a>
-  
+  <div class="Main">
+ 
+  Hello! Welcome to my website. Here is where you'll find my latest adventures, from exploring the undergrounds of Kensington to my newest creations in the kitchen.... try if you dare! 
 
-  
+  <a href="http://www.google.ca"> Search Google </a>
+  </div>
 
+  <p>
+    <div class="Timeline-subtitle"> 
+    I'm in Love!
 
-  Note that although this line looks like it should start a new paragraph,
-  it doesn't.
+  </p>
+  <p>My last trip lead me out to the great Canadian westcoast - Vancouver!
+  </div>
+  </p>
+  <div class="pics">
+  <img src='Pictures/van4.jpg' alt="chengdu" height="1000" width="1000"/>
+</div>
 
-  <p>Instead, put paragraphs in these tags</p>
-  <p>Like this.</p>
-  <img src='Pictures/chengdu.jpg' alt="chengdu" height="1000" width="1000"/>
-  <div> 
+  <div class="Main"> 
+    
     <h1> why I love CS <h1>
       <ul>
         <li> Make some cool things </li>
