file extension change

--- a/explore.html
+++ b/explore.html
@@ -332,7 +332,7 @@
       <div class="carousel-inner">
         <div class="item active">
           
-          <img src="Pictures/bar1.jpg" height=auto alt="">
+          <img src="Pictures/bar1.JPG" height=auto alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore.</h1>
