--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div class="carousel-inner">
         <div class="item active">
           
-          <img src="Pictures/italy1.1.jpg" height=auto alt="">
+          <img src="Pictures/italy1.1.JPG" height=auto alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore. See. Experience.</h1>
@@ -410,7 +410,7 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image img-polaroid pull-left" src="Pictures/italy2.jpg" width=650px height=auto/>
+        <img class="featurette-image img-polaroid pull-left" src="Pictures/italy2.JPG" width=650px height=auto/>
         <h2 class="featurette-heading">Interests.<span class="muted">Colour My World.</span></h2>
         <p class="lead">I love to laugh and to surround myself with positive people and vibrant energy. Life is a canvas waiting to be painted with splashes of colour. I strive to do what I enjoy and find passion in what I do. I'm an avid reader, all I need is a good book, a cup of green tea and nature's best treats to keep me happy. <a href="#hobbies">Meet Me!</a></p>
         
