--- a/portfolio.html
+++ b/portfolio.html
@@ -436,7 +436,7 @@
         </div>
          <!-- /.span4 -->
         <div class="span4">
-          <img class="img-rounded" src="pictures/hourofcode.jpg">
+          <img class="img-rounded" src="Pictures/hourofcode.jpg">
           <h2>Microsoft YouthSpark</h2>
           <p><a href="http://www.microsoft.com/about/corporatecitizenship/en-us/youthspark/youthsparkhub/hourofcode">Hour of Code</a></p>
           
