--- a/explore.html
+++ b/explore.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Shirley Yuan is a student from the University of Waterloo. She studies Math/ Financial Analysis and Risk Management, Minor Computer Science.">
     <meta name="author" content="Shirley Yuan">
 
-    <link rel="icon" href="pictures/logo.ico">
+    <link rel="icon" href="Pictures/logo.ico">
 
     <!-- Le styles -->
     <link href="css/bootstrap1.css" rel="stylesheet">
@@ -347,6 +347,10 @@
     <div class="container marketing">
       <hr class="featurette-divider">
        <footer>
+         <p class="pull-right">
+          <a href="http://ca.linkedin.com/pub/shirley-yuan/50/a82/621" style="text-decoration:none;"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a>
+           <a href="mailto:shirl.yuan@gmail.com" style="text-decoration:none;"><img src="http://www.muzeum-polskie.org/mpr/english/images/email_button.gif" width="45" height="40" alt="Email Shirley Yuan" style="vertical-align:middle" border="0"></a> 
+          <a href="#">Back to top</a></p>
         <p>&copy; 2014 Shirley Yuan. &middot; Created with Love &middot; </p>
       </footer>
 
