--- a/contact.html
+++ b/contact.html
@@ -346,6 +346,9 @@
 
     <hr class="featurette-divider">
        <footer>
+        <p class="pull-right">
+          <a href="http://ca.linkedin.com/pub/shirley-yuan/50/a82/621" style="text-decoration:none;"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a>
+        </p>
         <p>&copy; 2014 Shirley Yuan. &middot; Created with Love &middot; </p>
       </footer>
 
