--- a/portfolio.html
+++ b/portfolio.html
@@ -446,7 +446,7 @@
       <hr class="featurette-divider">
        <footer>
         <p class="pull-right">
-          <a href="http://ca.linkedin.com/pub/shirley-yuan/50/a82/621" style="text-decoration:none;"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a> 
+          <a href="https://www.linkedin.com/in/shirleyuan" style="text-decoration:none;"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a> 
            <a href="mailto:shirl.yuan@gmail.com" style="text-decoration:none;"><img src="http://www.muzeum-polskie.org/mpr/english/images/email_button.gif" width="45" height="40" alt="Email Shirley Yuan" style="vertical-align:middle" border="0"></a> 
         </p>
         <p>&copy; 2014 Shirley Yuan. &middot; Created with Love &middot; </p>
