--- a/hobbies.html
+++ b/hobbies.html
@@ -336,7 +336,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Simply Me.</h1>
-              <p class="lead">This is where you'll be updated on my latest piyo class, newest kitchen endeavors, and just little things that makes me happy.</p>
+              <p class="lead">This is where you'll be updated on my latest piyo class, newest kitchen endeavors, and just little things that make me happy.</p>
               
             </div>
           </div>
