--- a/portfolio.html
+++ b/portfolio.html
@@ -352,7 +352,7 @@
         <hr class="featurette-divider">
         <img class="featurette-image img-polaroid pull-left" src="http://upload.wikimedia.org/wikipedia/commons/f/fd/Downtown_Toronto-02.jpg" height=650px width=650px/>
       
-        <p class="lead" >The Co-op program at the University of Waterloo provided me the opportunity to experience different industries and discover what I'm passionate about. My previous terms include working as a business analyst at TD Securities, a financial analyst at DBRS, and I'm currently on the Dynamics team at Microsoft focusing on our CRM and ERP products. </p> 
+        <p class="lead" >The Co-op program at the University of Waterloo provided me the opportunity to experience different industries and discover what I'm passionate about. My previous terms include working as a business analyst at TD Securities and a financial analyst at DBRS, which provided valuable insights into rating agencies and fundamental financial institutions. I'm currently on the Dynamics team at Microsoft focusing on our CRM and ERP products. </p> 
 
       </div>
 
