--- a/contact.html
+++ b/contact.html
@@ -313,7 +313,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand nav-header" href="#">Shirley Yuan</a>
+            <a class="brand nav-header" href="shirleyuan.me">Shirley Yuan</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
