--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="Shirley Yuan is a student from the University of Waterloo. She studies Math/ Financial Analysis and Risk Management, Minor Computer Science.">
     <meta name="author" content="Shirley Yuan">
 
-    <link rel="icon" href="Pictures/logo.ico">
+    <link rel="icon" href="Pictures/favicon.png" type="image/png">
 
     <!-- Le styles -->
     <link href="css/bootstrap1.css" rel="stylesheet">
