--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Shirley Yuan is a student from the University of Waterloo. She studies Math/ Financial Analysis and Risk Management, Minor Computer Science.">
     <meta name="author" content="Shirley Yuan">
 
-    <link rel="icon" href="pictures/logo.ico">
+    <link rel="icon" href="logo.ico">
 
     <!-- Le styles -->
     <link href="css/bootstrap1.css" rel="stylesheet">
