--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="http://www.shirleyuan.me">
     <meta property="og:type" content="website">
 
-    <link rel="icon" href="Pictures/favicon.png" type="image/png">
+    <link rel="icon" href="logo.ico">
 
     <!-- Le styles -->
     <link href="css/bootstrap1.css" rel="stylesheet">
