--- a/contact.html
+++ b/contact.html
@@ -320,7 +320,7 @@
                 <li><a href="template.html">Home</a></li>
                 <li><a href="template.html#about">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="Shirley Yuan-Waterloo.pdf">Resume</a></li>
+                <li><a href="Shirley Yuan-Tech.pdf">Resume</a></li>
                 <li class="active"><a href="#contact">Contact</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
                
