changes to meta

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="Shirley Yuan is a student from the University of Waterloo. She studies Math/ Financial Analysis and Risk Management, Minor Computer Science.">
     <meta name="author" content="Shirley Yuan">
     <meta property="og:title"  content="Shirley Yuan - Student, University of Waterloo">
-    <meta property="og:description" content="Edward Yang is a student, studies math, financial analysis and risk management, computer science at Waterloo University">    
+    <meta property="og:description" content="Shirley Yuan is a student, studies math, financial analysis and risk management, computer science at Waterloo University">    
     <meta property="og:url" content="http://www.shirleyuan.me">
     <meta property="og:type" content="website">
 
