--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">About</a></li>
                 <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="Shirley Yuan-Waterloo.pdf">Resume</a></li>
+                <li><a href="Shirley Yuan-Tech.pdf">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
                
