--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta property="og:url" content="http://www.shirleyuan.me">
     <meta property="og:type" content="website">
 
-     <link rel="shortcut icon" href="/logo.ico" type="image/x-icon">
-    <link rel="icon" href="/logo.ico" type="image/x-icon">
+     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
+    <link rel="icon" href="logo.ico" type="image/x-icon">
 
     <!-- Le styles -->
     <link href="css/bootstrap1.css" rel="stylesheet">
