--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
           <img src="Pictures/italy1.1.JPG" height=auto alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Explore. See. Experience.</h1>
-              <p class="lead">I'm a wanderer. I love to lose myself on a trail in the woods, an abandoned beach or a winding alley.</p>
+              <h1>Live. Laugh. Learn.</h1>
+              <p class="lead">I love to challenge myself, explore the unknown, and find passion in what I do.</p>
               
             </div>
           </div>
