--- a/explore.html
+++ b/explore.html
@@ -345,6 +345,15 @@
    
     </div><!-- /.carousel -->
     <div class="container marketing">
+
+       <hr class="featurette-divider">
+       <div class="featurette">
+        <img class="featurette-image pull-right img-polaroid" src="Pictures/bigsur.jpg" width=600px">
+        <h2 class="featurette-heading">West Coast Roadtrip.<span class="muted"> Free Spirit.</span></h2>
+        <p style="font-size: 14px"> December 30, 2014</p>
+        <p class="lead">I love everything about the West coast; the smell of salt in the air, the feel of cool ocean breeze, the hypnotic rhythms of the sea, the majestic mountains that gently rolls you along its hills then suddenly spikes with anger through its ragged terrains. This Christmas, I explored the legendary Hwy 1 with its windy roads and breath-taking views.</p>
+      </div>
+
       <hr class="featurette-divider">
        <footer>
          <p class="pull-right">
