--- a/hobbies.html
+++ b/hobbies.html
@@ -348,8 +348,7 @@
 
        <hr class="featurette-divider">
        <div class="featurette">
-        <img class="featurette-image pull-right img-polaroid" src="Pictures/velocity.jpg" width=600px style="z-index:-1; padding-bottom: 30px; padding-top:30px">
-        <img class="pull-right img-rounded" src="Pictures/palette.jpg"style="width: 250px; height: auto; position:absolute; top: 1250px; right: 30px; z-index:0;">
+        <img class="featurette-image pull-right img-polaroid" src="Pictures/communitech.jpg" width=450px; padding-bottom: 30px; padding-top:30px">
         <h2 class="featurette-heading">Communitech.<span class="muted"> Waterloo's Startup Culture.</span></h2>
         <p style="font-size: 14px"> November 30, 2014</p>
         <p class="lead">Being a student at Waterloo, I've never fully appreicated the amazing startup dynamic we have in the area. This past weekend, I visited Communitech, housed in the same building as Google, Desire2Learn and Velocity. It was incredible to see so many ideas and innovations all concentrated in one place. There are so many resources available to propel these startups off the ground, so many interesting people to bounce ideas off of, and so much creativity and room for growth. Some really cool companies I came across this weekend include Palette, which makes module inputs to your software (photo on right), and Tempest Insight, which builds beautiful data visuals for real-estate developers. Now I just have to find the next great idea!</p>
