--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       <div class="carousel-inner">
         <div class="item active">
           
-          <img src="Pictures/italy1.1.JPG" height=auto alt="">
+          <img src="Pictures/bigsur.jpg" height=auto alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Live. Laugh. Learn.</h1>
