changes to hobbies and explore

--- a/explore.html
+++ b/explore.html
@@ -346,6 +346,14 @@
     </div><!-- /.carousel -->
     <div class="container marketing">
 
+      <hr class="featurette-divider">
+       <div class="featurette">
+        <img class="featurette-image pull-left img-polaroid" src="Pictures/roadtrip1.jpg" width=480px">
+        <h2 class="featurette-heading">Girls' Adventures.<span class="muted"> NY. Washington. Pittsburgh.</span></h2>
+        <p style="font-size: 14px"> August 20, 2015</p>
+        <p class="lead">Like many Waterloo kids, I don't have the luxury of summer breaks. My summers alternate between taking a full course load on campus and working on co-op. That's why these precious 3 weeks at the end of exams had to be made the most out of! I went on a girls adventure with mom to upstate NY, where we did some day drinking at wineries, travelled down to NYC to visit some friends who are studying at Parsons School of Design, drove to Washington to see where important people worked, and lastly to Pittsburgh to visit my long-time bestie who is starting her masters. We jammed out to Magic City Hippies, visited state parks, tried Ethiopian food, admired masterpieces at MET, all the while  trekking through cities and trails all without a heat stroke! </p>
+      </div>
+
        <hr class="featurette-divider">
        <div class="featurette">
         <img class="featurette-image pull-right img-polaroid" src="Pictures/cali1.jpg" width=480px">
