--- a/portfolio.html
+++ b/portfolio.html
@@ -370,7 +370,7 @@
           </div><!-- /.span4 -->
 
         <div class="span4">
-          <img class="round-edge" src="http://rcwib.students.rotmancommerce.utoronto.ca/files/2013/01/TD_SHIELD_PRINT_LOGO_COL_RGB.jpg" style="height: 300px">
+          <img class="round-edge" src="Pictures/td.png" style="height: 300px">
           <h2>Business Analyst</h2>
           
           <p style="padding-top: 28px">
@@ -397,7 +397,7 @@
        <h2 class="featurette-heading muted">Projects and Certificates</h2>
        <hr class="featurette-divider">
        <div class="featurette">
-       <img class="featurette-image img-round1 pull-left" src="http://www.bloomberg.com/professional/content/uploads/sites/2/2012/08/Bloomberg-Charts.jpg" style="padding-left: 65px; padding-right: 65px; height:300px">
+       <img class="featurette-image img-round1 pull-left" src="Pictures/bloomberg.gif" style="padding-left: 65px; padding-right: 65px; height:300px">
         <p class="lead">Bloomberg University Certificates:
           <ul>
             <li>Equity Essentials</li>
@@ -424,7 +424,7 @@
          <h1 class="h1-head muted">Other Experiences</h1>
         <div class="row">
         <div class="span4">
-          <img class="img-rounded" src="http://www.scenemagazine.com/Portals/0/scenelogo.gif">
+          <img class="img-rounded" src="Pictures/scene.jpg">
           <h2>The Scene Magazine</h2>
           <p><a href="http://www.scenemagazine.com/">Seasonal writer</a></p>
           
