--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Live. Laugh. Learn.</h1>
-              <p class="lead">I love to challenge myself, explore the unknown, and find passion in what I do.</p>
+              <p class="lead">Hello and welcome to my site! This is a personal project I built from the ground up to learn CSS, HTML and famiiarize myself with git and bash. I love to challenge myself, explore the unknown, and find passion in what I do.</p>
               
             </div>
           </div>
