--- a/explore.html
+++ b/explore.html
@@ -365,6 +365,7 @@
       <hr class="featurette-divider">
        <footer>
          <p class="pull-right">
+          <a href="https://instagram.com/shirl_yuan/" style="text-decoration:none;"><img src="http://www.uwec.edu/CIE/divisions/services/images/insta.png" width="40" height="35" alt="View Shirley Yuan's Instagram" style="vertical-align:middle" border="0"></a> 
           <a href="https://www.linkedin.com/in/shirleyuan"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a>
            <a href="mailto:shirl.yuan@gmail.com" style="text-decoration:none;"><img src="http://www.muzeum-polskie.org/mpr/english/images/email_button.gif" width="45" height="40" alt="Email Shirley Yuan" style="vertical-align:middle" border="0"></a> 
           <a href="#">Back to top</a></p>
