--- a/hobbies.html
+++ b/hobbies.html
@@ -348,6 +348,16 @@
 
        <hr class="featurette-divider">
        <div class="featurette">
+        <img class="featurette-image pull-right img-polaroid" src="Pictures/supermoon.jpg" width=450px; padding-bottom: 30px; padding-top:30px">
+        <h2 class="featurette-heading">Supermoon.<span class="muted"> Lunar Eclipse.</span></h2>
+        <p style="font-size: 14px"> September 27, 2015</p>
+        <p class="lead">This year's lunar eclipse was extra special; the last one occurred in 1982 and the next one won't take place until 2033! My friends and I were super excited to see it; we leased a massive telescope from the science faculty at school and even borrowed a ladder to climb onto the rooftop. Unfortunately, we only stayed for half an hour and went inside just before 10pm as the clouds completely covered all traces of light. This was the only visible picture I managed to take of the moon, but I heard the view was much better in Montreal! Hope you guys managed to catch a glimpse of it in whichever part of the world you are! </p>
+          
+      </div>
+
+
+       <hr class="featurette-divider">
+       <div class="featurette">
         <img class="featurette-image pull-left img-polaroid" src="Pictures/oweek.jpg" width=450px; padding-bottom: 30px; padding-top:30px">
         <h2 class="featurette-heading">Math Orientation Week.<span class="muted"> UW OWEEK 2015.</span></h2>
         <p style="font-size: 14px"> September 12, 2015</p>
@@ -387,6 +397,7 @@
 
        <footer>
          <p class="pull-right">
+          <a href="https://instagram.com/shirl_yuan/" style="text-decoration:none;"><img src="http://www.uwec.edu/CIE/divisions/services/images/insta.png" width="40" height="35" alt="View Shirley Yuan's Instagram" style="vertical-align:middle" border="0"></a> 
           <a href="https://www.linkedin.com/in/shirleyuan" style="text-decoration:none;"><img src="http://www.gemstone.umd.edu/images/linkedIn.png" width="40" height="35" alt="View Shirley Yuan's LinkedIn profile" style="vertical-align:middle" border="0"></a>
            <a href="mailto:shirl.yuan@gmail.com" style="text-decoration:none;"><img src="http://www.muzeum-polskie.org/mpr/english/images/email_button.gif" width="45" height="40" alt="Email Shirley Yuan" style="vertical-align:middle" border="0"></a> 
           <a href="#">Back to top</a></p>
